k8s/service-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
      - name: service-c
        image: service-c:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
spec:
  selector:
    app: service-c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
